crates/treebank-java/grammar.js
    program: $ => seq(
      repeat($._directive),
      repeat($._top_level),
    ),

    _top_level: $ => choice($._type_declaration, $.module_declaration, ';'),

    // module-info.java (JLS 7.7). Every word here is CONTEXTUAL -- `module`,
    // `requires`, `exports`, `opens`, `uses`, `provides`, `to`, `with`,
    // `open` and `transitive` are all ordinary identifiers everywhere else,
    // so none of them may join the reserved set. They are spelled inline
    // rather than added to `_soft_keyword` because each is legal in exactly
    // one slot of one rule, and the file itself is the context: nothing
    // below is reachable outside a module declaration.
    _directive: $ => choice($.package_declaration, $.import_declaration),

    package_declaration: $ => seq(
      repeat($._attribute),
      'package',
      field('name', $._name),
      ';',
    ),

    import_declaration: $ => seq(
      'import',
      optional('static'),
      field('name', $._name),
      optional(seq('.', '*')),
      ';',
    ),

    // ── declarations ─────────────────────────────────────────────────
    class_declaration: $ => seq(
      optional($.modifiers),
      'class',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      optional($.superclass),
      optional($.super_interfaces),
      optional($.permits_clause),
      field('body', $.class_body),
    ),

    superclass: $ => seq('extends', $._type),
    super_interfaces: $ => seq('implements', $._type_list),
    permits_clause: $ => seq('permits', $._type_list),
    _type_list: $ => seq($._type, repeat(seq(',', $._type))),

    interface_declaration: $ => seq(
      optional($.modifiers),
      'interface',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      optional($.extends_interfaces),
      optional($.permits_clause),
      field('body', $.interface_body),
    ),

    enum_declaration: $ => seq(
      optional($.modifiers),
      'enum',
      field('name', $.identifier),
      optional($.super_interfaces),
      field('body', $.enum_body),
    ),

    enum_body: $ => seq(
      '{',
      optional(seq($.enum_constant, repeat(seq(',', $.enum_constant)), optional(','))),
      optional(seq(';', repeat($._member))),
      '}',
    ),

    enum_constant: $ => seq(
      optional(alias($._enum_constant_modifiers, $.modifiers)),
      field('name', $.identifier),
      field('arguments', optional($.arguments)),
      field('body', optional($.class_body)),
    ),

    record_declaration: $ => seq(
      optional($.modifiers),
      'record',
      field('name', $.identifier),
      field('type_parameters', optional($.type_parameters)),
      field('parameters', $.parameters),
      optional($.super_interfaces),
      field('body', $.class_body),
    ),

    // The dynamic precedence breaks a GLR tie. `public @interface C { }`
    // as a class member has a second complete reading: a compact
    // constructor named C whose modifiers include an annotation named
    // `interface` -- keyword extraction only prefers the keyword within
    // one branch, and a GLR split keeps both alive. With an empty body
    // nothing downstream kills the wrong branch, and the tie broke toward
    // the compact constructor: zero errors, entirely wrong tree, found by
    // the javac span oracle in args4j. A real annotation-type declaration
    // beats a constructor conjured from `@interface`.
    //
    // The deeper looseness -- compact constructors are RECORD-only members
    // (JLS 8.10.4) and `_member` offers them in every class body -- is a
    // declared widening, not fixable here without splitting `_member`.
    class_body: $ => seq('{', repeat($._member), '}'),
    interface_body: $ => seq('{', repeat($._member), '}'),

    _member: $ => choice(
      $._type_declaration,
      $.method_declaration,
      $.constructor_declaration,
      $.compact_constructor_declaration,
      $.field_declaration,
      $.initializer_block,
      ';',
    ),

    field_declaration: $ => seq(
      optional($.modifiers),
      field('type', $._unannotated_type),
      $._declarator_list,
      ';',
    ),

    method_declaration: $ => seq(
      optional($.modifiers),
      field('type_parameters', optional($.type_parameters)),
      field('type', choice($._type, $.void_type)),
      field('name', $.identifier),
      field('parameters', $.parameters),
      optional($._dims),
      optional($.throws_clause),
      choice(field('body', $.block), ';'),
    ),

    constructor_declaration: $ => seq(
      optional($.modifiers),
      field('type_parameters', optional($.type_parameters)),
      field('name', $.identifier),
      field('parameters', $.parameters),
      optional($.throws_clause),
      field('body', $.block),
    ),

    // A record's compact canonical constructor: no parameter list at all,
    // the components being implicit.
    compact_constructor_declaration: $ => seq(
      optional($.modifiers),
      field('name', $.identifier),
      field('body', $.block),
    ),

    modifiers: $ => repeat1(choice($._attribute, $._modifier)),

    _modifier: $ => choice(
      $.access_modifier,
      $.static_modifier,
      $.final_modifier,
      $.abstract_modifier,
      $.sealed_modifier,
      $.other_modifier,
    ),

    access_modifier: _ => choice('public', 'protected', 'private'),
    static_modifier: _ => 'static',
    final_modifier: _ => 'final',
    sealed_modifier: _ => choice('sealed', 'non-sealed'),
    _attribute: $ => $.annotation,

    _type: $ => choice($._unannotated_type, $.annotated_type),

    // The negative dynamic precedence loses GLR ties on purpose: at
    // `@SuppressWarnings("x") @Override R call();` both readings complete --
    // annotations on the DECLARATION (javac's MODIFIERS) or a java-8
    // annotated TYPE `@A @B R`. javac attributes leading annotations to the
    // declaration, and so do we; annotated_type still wins wherever it is
    // the only reading, e.g. `List<@NonNull String>`.
    _type_id: $ => alias($.identifier, $.type_identifier),

    _unannotated_type: $ => choice(
      $.primitive_type,
      $._type_id,
      $.scoped_type_identifier,
      $.generic_type,
      $.array_type,
    ),

    primitive_type: _ => choice(
      'byte', 'short', 'int', 'long', 'char', 'float', 'double', 'boolean',
    ),

    generic_type: $ => prec.dynamic(1, seq(
      choice($._type_id, $.scoped_type_identifier),
      field('type_arguments', $.type_arguments),
    )),

    array_type: $ => seq(
      field('element', $._unannotated_type),
      $._dims,
    ),

    _dims: $ => repeat1(seq(repeat($._attribute), $._empty_dim)),

    // One token, so the LEXER settles what precedence could not. At
    // `new int[2] • [` the parser may either continue this expression's
    // dimensions or start an array access on what was just created; with
    // `[]` arriving whole, an array access — which needs `[` and then an
    // index — cannot match it at all, and the question never reaches the
    // parse table. Java allows whitespace inside the brackets, so the
    // token does too.
    _empty_dim: _ => token(seq('[', /\s*/, ']')),

    type_arguments: $ => seq(
      '<',
      optional(seq(choice($._type, $.wildcard), repeat(seq(',', choice($._type, $.wildcard))))),
      '>',
    ),

    type_parameters: $ => seq(
      '<',
      $.type_parameter,
      repeat(seq(',', $.type_parameter)),
      '>',
    ),

    type_parameter: $ => seq(
      repeat($._attribute),
      field('name', $.identifier),
      optional(seq('extends', $._type, repeat(seq('&', $._type)))),
    ),

    // ── parameters ───────────────────────────────────────────────────
    parameters: $ => seq(
      '(',
      optional(seq($._parameter, repeat(seq(',', $._parameter)))),
      ')',
    ),

    _parameter: $ => choice($.parameter, $.spread_parameter, $.receiver_parameter),

    // `modifiers`-wrapped like every other declaration -- the full-corpus
    // javac span run found 23,283 MODIFIERS boundaries at parameters with
    // no node of ours, the same inconsistency the 2k sample caught on
    // locals. One construct, one shape, everywhere.
    parameter: $ => seq(
      optional(alias($._local_modifiers, $.modifiers)),
      field('type', $._unannotated_type),
      field('name', $.identifier),
      optional($._dims),
    ),

    _statement: $ => choice(
      // A local class is legal; a field declaration is not.
      $._type_declaration,
      $.local_variable_declaration,
      $._control_flow,
      $.expression_statement,
      $.block,
      $.labeled_statement,
      $.synchronized_statement,
      $.assert_statement,
      $.empty_statement,
    ),

    block: $ => seq('{', repeat($._statement), '}'),
    expression_statement: $ => seq($._statement_expression, ';'),

    _statement_expression: $ => choice(
      $._assignment,
      $.update_expression,
      $._invocation,
      $.object_creation_expression,
    ),

    _declarator_list: $ => seq($.variable_declarator, repeat(seq(',', $.variable_declarator))),

    _local_modifiers: $ => repeat1(choice($._attribute, $.final_modifier)),
    _enum_constant_modifiers: $ => repeat1($._attribute),

    variable_declarator: $ => seq(
      field('name', $.identifier),
      optional($._dims),
      optional(seq('=', field('value', choice($._expression, $.array_initializer)))),
    ),

    if_statement: $ => prec.right(seq(
      'if',
      field('condition', $.parenthesized_expression),
      field('consequence', $._statement),
      optional(seq('else', field('alternative', $._statement))),
    )),

    return_statement: $ => seq('return', optional($._expression), ';'),
    throw_statement: $ => seq('throw', $._expression, ';'),
    _expression: $ => choice($.lambda, $._no_lambda),

    // Java puts LambdaExpression at the TOP of its expression grammar: a
    // lambda is never an operand. Ours had it reachable from every operand
    // position, so at `case A -> 1` the parser started a ternary whose
    // condition was the lambda `A -> 1` and then had nothing to finish it
    // with — 539 corpus files, every one an arrow switch over an enum.
    // Excluding lambda from the top of `_case_constant` was not enough,
    // because the sub-tiers put it back as a prefix.
    _no_lambda: $ => choice(
      $._assignment,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.update_expression,
      $.cast_expression,
      $.instanceof_expression,
      $.switch_expression,
      $._primary,
    ),

    _primary: $ => choice(
      $._literal,
      $._name,
      $._access,
      $._invocation,
      $.parenthesized_expression,
      $.object_creation_expression,
      $.array_creation_expression,
      $.method_reference,
      $.class_literal,
      $.this,
      $.super,
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    this: _ => 'this',
    super: _ => 'super',

    assignment: $ => prec.right(PREC.assign, seq(
      field('left', choice($._name, $._access)),
      field('operator', choice(
        '=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=', '>>>=',
      )),
      field('right', choice($._expression, $.array_initializer)),
    )),

    // The condition may not be a lambda; the branches may — `c ? x -> 1 : y -> 2`
    // is legal java.
    binary_expression: $ => choice(
      ...[
        ['||', PREC.or], ['&&', PREC.and], ['|', PREC.bitor], ['^', PREC.bitxor],
        ['&', PREC.bitand], ['==', PREC.equality], ['!=', PREC.equality],
        ['<', PREC.relational], ['>', PREC.relational],
        ['<=', PREC.relational], ['>=', PREC.relational],
        ['<<', PREC.shift], ['>>', PREC.shift], ['>>>', PREC.shift],
        ['+', PREC.additive], ['-', PREC.additive],
        ['*', PREC.multiplicative], ['/', PREC.multiplicative], ['%', PREC.multiplicative],
      ].map(([op, p]) => prec.left(p, seq(
        field('left', $._no_lambda),
        field('operator', op),
        field('right', $._no_lambda),
      ))),
    ),

    instanceof_expression: $ => prec(PREC.relational, seq(
      field('left', $._no_lambda),
      'instanceof',
      optional('final'),
      field('right', choice($._type, $._pattern)),
    )),

    lambda: $ => seq(
      field('parameters', choice($.identifier, $.parameters, $.inferred_parameters)),
      '->',
      field('body', choice($._expression, $.block)),
    ),

    _access: $ => choice($.field_access, $.array_access),

    field_access: $ => prec(PREC.access, seq(
      field('object', choice($._primary, $.super)),
      '.',
      optional(seq($.super, '.')),
      field('field', choice($.identifier, $.this)),
    )),

    method_invocation: $ => prec(PREC.access, seq(
      optional(seq(
        field('object', choice($._primary, $.super)),
        '.',
        optional(seq($.super, '.')),
        field('type_arguments', optional($.type_arguments)),
      )),
      field('name', $.identifier),
      field('arguments', $.arguments),
    )),

    // No `;` of its own: it is reached through `_invocation` like a method
    // call, and `expression_statement` supplies the terminator. Java only
    // allows this form as a constructor's first statement, so accepting it
    // wherever an expression may go is a widening -- recorded in
    // ledger.toml rather than paid for by demoting `_invocation`.
    explicit_constructor_invocation: $ => prec(PREC.access, seq(
      optional(seq($._primary, '.')),
      field('type_arguments', optional($.type_arguments)),
      field('constructor', choice($.this, $.super)),
      field('arguments', $.arguments),
    )),

    arguments: $ => seq(
      '(',
      optional(seq($._argument, repeat(seq(',', $._argument)))),
      ')',
    ),

    _argument: $ => $._expression,

    object_creation_expression: $ => prec.right(PREC.new, seq(
      optional(seq(field('object', $._primary), '.')),
      'new',
      field('type_arguments', optional($.type_arguments)),
      repeat($._attribute),
      field('type', choice($._type_id, $.scoped_type_identifier, $.generic_type, $.primitive_type)),
      field('arguments', $.arguments),
      field('body', optional($.class_body)),
    )),

    // Above `_access`: at `new int[2] • [` the parser can either continue
    // this expression's dimensions or start an array access on what was
    // just created, and java says the dimensions win.
    array_creation_expression: $ => prec.right(PREC.access + 1, seq(
      'new',
      repeat($._attribute),
      field('type', choice($._type_id, $.scoped_type_identifier, $.generic_type, $.primitive_type)),
      choice(
        // Sized dimensions, then any number of empty ones:
        // `new int[n][][]`. The trailing pair is written out rather than
        // reusing `_dims`, which the parser also owes to `array_access` and
        // could not tell apart past the first `[]`.
        seq(
          repeat1(seq(repeat($._attribute), '[', $._expression, ']')),
          repeat(seq(repeat($._attribute), $._empty_dim)),
        ),
        seq($._dims, field('value', $.array_initializer)),
      ),
    )),

    method_reference: $ => prec(PREC.access, seq(
      choice($._primary, $._unannotated_type, $.super),
      '::',
      field('type_arguments', optional($.type_arguments)),
      choice('new', $.identifier),
    )),

    _pattern: $ => choice($.type_pattern, $.record_pattern),

    _record_pattern_body: $ => seq(
      '(',
      optional(seq($._pattern_component, repeat(seq(',', $._pattern_component)))),
      ')',
    ),

    scoped_identifier: $ => seq(
      field('scope', $._name),
      '.',
      field('name', $.identifier),
    ),

    identifier: _ => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // ── literals ─────────────────────────────────────────────────────
